css/main.css
/*
 * Global and bootstrap overries
 */

 html, body{
 /*
 * children elements ignore min-height when calculating
 * their own height, and hence absolute values are required here.
 http://www.456bereastreet.com/archive/201306/height_in_percent_when_parent_has_min-height_and_no_height/
 */
  height: 100%;
  width:100%;
}
.row {
	/* removing margins */
	margin-left: 0%;
	margin-right: 0%;
}
.container-fluid {
	padding: 0%;
}

/* COLOR SCHEME
 *
 * do not name classes according to color names, 
 * working out a few colors from their RGB is much 
 * less painful than having to change entire
 * html doc structure after name updates.
 */
.scheme-1 {
	background-color: rgba(255, 255, 185, 1);
}
.scheme-2{
	background-color: rgba(231,231,231,1);
}


/* Element specific CSS */

.container-bg{
 	/* Set rules to fill background */
 	min-height: 100%;
 	min-width: 100%;

 	/* Set up proportionate scaling */
 	width: 100%;
 	height: 100%;
 	position:relative;
 	top:0%;
 	left:0%;
 	/* set imgae */
 	background-image: url(../img/snake_charmer_original.jpg);
 	background-position: center;
 	background-size: cover;
 	-o-background-size: cover;
 }

.header-position{
	position:relative;
	top:70%;
	left:0%;
	width:100%;
}

.header-text {
	color:#137700;
	font-weight: bolder;
	font-size: 2em;
}

.header-subtext {
	color:#137700;
	font-weight: lighter;
	font-style: italic;
	font-size: 1em;
}

.about {
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 10%;
	padding-bottom:10%;	
}
.about-head {
	font-weight: bold;
	font-size: 3em;
}
.about-text {
	font-weight: bold;
}

.interests{
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 10%;
	padding-bottom:10%;
}
.interests-head {
	font-weight: bold;
	font-size: 3em;
}
.interests-text {
	font-weight: bold;
}
.coffee-cup-container{
	min-height: 100%;
	padding-top:5%;
	padding-bottom:5%;
}
.coffee-cup{
	max-width:75%;
}
@media only screen and (max-width: 992px) {
    .coffee-cup {
    	max-width:20%;
    }
    .coffee-cup-container{
    	padding:0.1%;
    }
}

.work{
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 10%;
	padding-bottom:10%;
}
.work-head {
	font-weight: bold;
	font-size: 3em;
}
.work-text {
	font-weight: bold;
}

.work-img-card{
	margin-bottom: 7px;
	background-color: rgba(241, 148, 49, 0.73);
	border-radius: 5px;
	box-shadow: 3px 3px 3px #888888;
}
@media screen and (min-width: 992px){
	.work-img-card{
		max-width: 30%;
		margin:0.5%;
	}
}
.work-img-container{
	text-align: center;
}
.work-img{
	margin-top:7px;
	width: 150px;
	height:auto;
}

.work-img-discr{
	margin-top:7px;
	margin-bottom:7px;
	padding:3px;
}
.blog {
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 10%;
	padding-bottom:10%;
}
.blog-head {
	font-weight: bold;
	-webkit-column-rule: #333;
	-moz-column-rule: #333;
	-o-column-rule: #333;
	column-rule: #333;
	font-size: 3em;
}
.blog-text {
	font-weight: bold;
}

.contact {
	padding-left: 10%;
	padding-right: 10%;
	padding-top: 10%;
	padding-bottom:10%;
}
.contact-head {
	font-weight: bold;
	text-decoration: underline;
	font-size: 3em;
}
.contact-text {
	font-weight: bold;
}

/* em is basically twice the height of a font char */
.footer {
	padding-top:1%;
	padding-bottom: 0.5%;
	min-height:2em;
	color: rgba(119, 119, 119,1);
	background-color: #f8f8f8;
}
.footer-subheading{
	font-weight: lighter;
	font-size: xx-small;
}

.footer-sugar {
	font-size: 90%;
    color: rgba(3, 129, 183,1);
    padding-left: 2px;
    padding-right:2px;
    background-color: rgba(255, 205, 205,0.3);
    border-radius: 4px;
}
.code-like {
    padding: 2px 4px;
    padding-top: 2px;
    padding-right: 4px;
    padding-bottom: 2px;
    padding-left: 4px;
    font-size: 90%;
    color: #55FF43;
    background-color: rgba(0, 0, 0, 0.58);
    border-radius: 4px;
}
.coffee-cup-container{
	min-height: 100%;
	padding-top:5%;
	padding-bottom:5%;
}
.coffee-cup{
	max-width:75%;
}
@media only screen and (max-width: 992px) {
    .coffee-cup {
    	max-width:20%;
    }
    .coffee-cup-container{
    	padding:0.1%;
    }
}

